Update storage to save counter and personId